<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Drawing TODO</string>
    <string name="str_date">Date</string>
    <string name="str_time">Time</string>
    <string name="str_desc">Description</string>
    <string name="str_ring">Ring</string>
    <string name="str_categ">Category</string>
    <string name="loading_desc">remember your underwear</string>
    <string name="next">next</string>
    <string name="menuview">view</string>
    <string name="menuundo">undo</string>
    <string name="menuredo">redo</string>
    <string name="menuclear">clear</string>
    <string name="menuexit">exit</string>
    <string name="menuedit">edit</string>
    <string name="ring">choose a ring here</string>
    <string name="sdcardmis">sd card not found</string>
    <string name="deschint">I will ...</string>
    <string name="menulayer">layer</string>
    <string name="load">load</string>
    <string name="text">text</string>
    <string name="menuelements">elem</string>
    <string name="menushare">share</string>
    <string name="temptext">arbitary</string>
    <string name="alert">alert</string>
    <string name="alert_exit_edit">This will combine the image as one and loss the layer information. Are you sure to continue?</string>
    <string name="loadtitle">Load content from:</string>
    <string name="autosave">TODO saved succeed! </string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="where">where</string>
    <string name="when">when</string>
    <string name="what">what</string>
    <string name="how">how</string>
    <string name="status">status</string>
    <string name="menurefresh">refresh</string>
    <string name="menusetting">settings</string>
    <string name="menucolor">color</string>
    <string name="pickcolor">Pick a Color</string>
    <string name="flur">blur</string>
    <string name="emboss">emboss</string>
    <string name="add">add</string>
    <string name="erase">erase</string>
    <string name="darken">darken</string>
    <string name="dst">dst</string>
    <string name="dst_in">dst_in</string>
    <string name="dst_atop">dst_atop</string>
    <string name="dst_out">dst_out</string>
    <string name="dst_over">dst_over</string>
    <string name="lighten">lighten</string>
    <string name="multiply">multiply</string>
    <string name="screen">screen</string>
    <string name="src">src</string>
    <string name="src_in">src in</string>
    <string name="src_out">src out</string>
    <string name="src_over">src over</string>
    <string name="src_atop">src atop</string>
    <string name="xor">xor</string>
    <string name="avoid">avoid</string>
    <string name="target">target</string>
	<string name="reset">reset</string>
	<string name="colorhint">8 digits color</string>
	<string name="titleUnspecified">Please describe the TODO first</string>
	<string name="more"><strong>more</strong>...</string>
	<string name="search">search</string>
	<string name="weather">weather</string>
	<string name="empty">empty</string>
	<string name="config">config</string>
	<string name="remove">remove</string>
	<string name="admob_pub_id">a14fb0fd670d35e</string>
	<string name="noweiz">No app can fetch geolocation!</string>
	<string name="later">later</string>
	<string name="before">before</string>
	<string name="second">second</string>
	<string name="yesterday">yesterday</string>
	<string name="beforeyesterday">the day before yesterday</string>
	<string name="tomorrow">tomorrow</string>
	<string name="aftertomorrow">the day after tomorrow</string>
	<string name="hinttrigger">Prompt</string>
	<string name="sounds">Sound</string>
</resources>
