<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" >
        <com.chaos.sleepcry.busecretary.mydraw.PaintBoard
            android:id="@+id/canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deschint"
        android:background="@drawable/input"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:shadowColor="@color/red"
        android:shadowDx="2"
        android:shadowDy="0"
        android:singleLine="true"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal" >
        <ImageButton
            android:id="@+id/btn_ok"
            style="@style/underlyingbtn"
            android:onClick="ok"
            android:scaleType="fitCenter"
            android:src="@drawable/add" />
        <ImageButton
            android:id="@+id/btn_view"
            style="@style/underlyingbtn"
            android:onClick="view"
            android:scaleType="fitCenter"
            android:src="@drawable/history"
            android:text="@string/menuview" />
        <ImageButton
            android:id="@+id/btn_clear"
            style="@style/underlyingbtn"
            android:onClick="clear"
            android:scaleType="fitCenter"
            android:src="@drawable/eraser"
            android:text="@string/menuclear" />
    </LinearLayout>
</LinearLayout>