<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >
        <!-- hour -->
        <TextView
            android:id="@+id/tvhour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour"
            android:textSize="15dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvminute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/tvhour"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >
        <kankan.wheel.widget.WheelView
            android:id="@+id/hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvhour"
            android:layout_weight="1"
            android:gravity="center" />
        <!-- minute -->
        <kankan.wheel.widget.WheelView
            android:id="@+id/minute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvminute"
            android:layout_toRightOf="@id/hour"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>
    <!-- month -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >
        <TextView
            android:id="@+id/tvmonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/hour"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textSize="15dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/minute"
            android:layout_toRightOf="@id/tvmonth"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >
        <kankan.wheel.widget.WheelView
            android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvmonth"
            android:layout_weight="1"
            android:gravity="center" />
        <!-- day -->
        <kankan.wheel.widget.WheelView
            android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvday"
            android:layout_toRightOf="@id/month"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>