<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bs="http://schemas.android.com/apk/res/com.chaos.sleepcry.busecretary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
        <com.chaos.sleepcry.busecretary.mydraw.PaintBoard
            android:id="@+id/surfaceView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tvtemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4px"
            android:gravity="center"
            android:maxHeight="200dp"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:textColor="@color/white" />
        <EditText
            android:id="@+id/ettemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="4px"
            android:hint="@string/temptext"
            android:maxHeight="200dp"
            android:scrollHorizontally="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone" />
    </FrameLayout>
    <SeekBar
        android:id="@+id/seekbar1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:max="20"
        android:progress="2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <com.chaos.sleepcry.busecretary.canvasedit.LineChooseView
            android:id="@+id/lcv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:onClick="changeLine"
            bs:elemcolor="@color/white"
            bs:width="2dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >
        <com.chaos.sleepcry.busecretary.colorpalette.ColorPalette
            android:id="@+id/cp"
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
            <Button
                android:id="@+id/load"
                style="@style/underlyingbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="load"
                android:text="@string/load"
                android:textSize="20dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/white" />
            <Button
                android:id="@+id/text"
                style="@style/underlyingbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="addText"
                android:text="@string/text"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>